apps/production/client-sites/mariana-toro/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariana-toro
  namespace: lulo-demo-landings
  labels:
    app: mariana-toro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariana-toro
  template:
    metadata:
      labels:
        app: mariana-toro
        name: mariana-toro
    spec:
      containers:
      - name: mariana-toro
        image: "registry.yesidlopez.de/mariana-toro:v1.0.3" # {"$imagepolicy": "lulo-demo-landings:mariana-toro"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
      - name: registry-secret
