apps/production/client-sites/mariana-toro/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariana-toro
  name: mariana-toro
  namespace: lulo-demo-landings
spec:
  selector:
    app: mariana-toro
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
