apps/production/client-sites/mariana-toro/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mariana-toro
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mariana-toro-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Demo Lulo AI"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mariana-toro.demo.luloai.com
      secretName: mariana-toro-tls
  rules:
    - host: mariana-toro.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mariana-toro
                port:
                  number: 3000
